# docs/swagger.json
@@ -532,10 +532,80 @@
                         }
                     }
                 }
+            },
+            "patch": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
+                "description": "Add amount or descrease amount (in case of negative amount) in wallet (only for admin in moment)",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "wallet"
+                ],
+                "summary": "Add amount in wallet",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "wallet id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Amount",
+                        "name": "amount",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/walletHandler.AddAmountRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.WalletModel"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "error"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "error"
+                        }
+                    }
+                }
             }
         }
     },
     "definitions": {
+        "models.WalletModel": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "walletID": {
+                    "type": "integer"
+                }
+            }
+        },
         "registerTypeService.RegisterTypeResponse": {
             "type": "object",
             "properties": {
@@ -733,6 +803,14 @@
                 }
             }
         },
+        "walletHandler.AddAmountRequest": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number"
+                }
+            }
+        },
         "walletService.WalletResponse": {
             "type": "object",
             "properties": {
@@ -746,6 +824,9 @@
         }
     },
     "securityDefinitions": {
+        "BasicAuth": {
+            "type": "basic"
+        },
         "BearerToken": {
             "type": "apiKey",
             "name": "Authorization",
